--- a/default.project.json
+++ b/default.project.json
@@ -34,6 +34,12 @@
         "$path": "src/ServerScriptService"
       }
     },
+    "ServerStorage": {
+      "$className": "ServerStorage",
+      "Source": {
+        "$path": "src/ServerStorage"
+      }
+    },
     "StarterPlayer": {
       "$className": "StarterPlayer",
       "StarterPlayerScripts": {
