🐛 Fix incorrect world import naming

--- a/default.project.json
+++ b/default.project.json
@@ -58,7 +58,7 @@
       "$properties": {
         "FilteringEnabled": true
       },
-      "Terrain": {
+      "World": {
         "$path": "World.rbxmx"
       }
     }
